--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
+  node:
+    image: prom/node-exporter
+    ports:
+      - 9100:9100
