--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,23 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./rules.yml:/etc/prometheus/rules.yml
     ports:
       - 9090:9090
   node:
     image: prom/node-exporter
     ports:
       - 9100:9100
+  alertmanager:
+    image: prom/alertmanager
+    volumes:
+      - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+    ports:
+      - 9093:9093
+    depends_on:
+      - smtp
+  smtp:
+    image: schickling/mailcatcher
+    ports:
+      - "1080:1080"
+      - "1025:1025"
