--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,5 +1,13 @@
 global:
   scrape_interval: 10s
+  evaluation_interval: 10s # 10秒ごとに評価
+rule_files:
+  - rules.yml
+alerting:
+  alertmanagers:
+  - static_configs:
+    - targets:
+       - 'alertmanager:9093'
 scrape_configs:
   - job_name: prometheus
     static_configs:
