--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,9 @@ services:
     ports:
       - "1080:1080"
       - "1025:1025"
+  httpserver:
+    build: ./httpserver
+    command: python helloworld.py
+    ports:
+      - "8000:8000"
+      - "8001:8001"
