--- a/prometheus.yml
+++ b/prometheus.yml
@@ -16,3 +16,7 @@ scrape_configs:
     static_configs:
       - targets:
          - 'node:9100'
+  - job_name: example
+    static_configs:
+      - targets:
+        - httpserver:8000
