--- a/prometheus.yml
+++ b/prometheus.yml
@@ -20,3 +20,6 @@ scrape_configs:
     static_configs:
       - targets:
         - httpserver:8000
+  - job_name: consul
+    consul_sd_configs:
+      - server: 'consul-server-1:8500'
