--- a/prometheus.yml
+++ b/prometheus.yml
@@ -23,3 +23,8 @@ scrape_configs:
   - job_name: consul
     consul_sd_configs:
       - server: 'consul-server-1:8500'
+    relabel_configs:
+      - source_labels: [__meta_consul_address]
+        regex: '(.*)'
+        replacement: '${1}:9100'
+        target_label: __address__
